# icub_haptic_exploration_environment

./: .gitignore  CMakeLists.txt  README.md
environment/: CMakeLists.txt
environment/models/braille/br_A/: A.dae  A.stl  model.config  model.sdf
environment/models/braille/br_B/: B.dae  B.stl  model.config  model.sdf
environment/models/braille/br_C/: C.dae  C.stl  model.config  model.sdf
environment/models/braille/br_D/: D.dae  D.stl  model.config  model.sdf
environment/models/braille/br_E/: E.dae  E.stl  model.config  model.sdf
environment/models/braille/br_F/: F.dae  F.stl  model.config  model.sdf
environment/models/braille/br_G/: G.dae  G.stl  model.config  model.sdf
environment/models/braille/br_H/: H.dae  H.stl  model.config  model.sdf
environment/models/braille/br_I/: I.dae  I.stl  model.config  model.sdf
environment/models/braille/br_J/: J.dae  J.stl  model.config  model.sdf
environment/models/braille/br_K/: K.dae  K.stl  model.config  model.sdf
environment/models/braille/br_L/: L.dae  L.stl  model.config  model.sdf
environment/models/braille/br_M/: M.dae  M.stl  model.config  model.sdf
environment/models/braille/br_N/: N.dae  N.stl  model.config  model.sdf
environment/models/braille/br_O/: O.dae  O.stl  model.config  model.sdf
environment/models/braille/br_P/: P.dae  P.stl  model.config  model.sdf
environment/models/braille/br_Q/: Q.dae  Q.stl  model.config  model.sdf
environment/models/braille/br_R/: R.dae  R.stl  model.config  model.sdf
environment/models/braille/br_S/: S.dae  S.stl  model.config  model.sdf
environment/models/braille/br_Space/: Space.dae  Space.stl  model.config  model.sdf
environment/models/braille/br_T/: T.dae  T.stl  model.config  model.sdf
environment/models/braille/br_U/: U.dae  U.stl  model.config  model.sdf
environment/models/braille/br_V/: V.dae  V.stl  model.config  model.sdf
environment/models/braille/br_W/: W.dae  W.stl  model.config  model.sdf
environment/models/braille/br_X/: X.dae  X.stl  model.config  model.sdf
environment/models/braille/br_Y/: Y.dae  Y.stl  model.config  model.sdf
environment/models/braille/br_Z/: Z.dae  Z.stl  model.config  model.sdf
environment/models/contour_following/cf_circle_2_5d/: circle_2_5d.dae  model.config
environment/models/contour_following/cf_circle_2d/: circle_2d.dae  circle_2d.stl  model.config  model.sdf
environment/models/contour_following/cf_circle_3d/: circle_3d.dae  circle_3d.stl  model.config  model.sdf
environment/models/contour_following/cf_infinity_2_5d/: infinity_2_5d.dae  infinity_2_5d.stl  model.config  model.sdf
environment/models/contour_following/cf_infinity_2d/: infinity_2d.dae  infinity_2d.stl  model.config  model.sdf
environment/models/contour_following/cf_infinity_3d/: infinity_3d.dae  infinity_3d.stl  model.config  model.sdf
environment/models/contour_following/cf_line_2_5d/: line_2_5d.dae  line_2_5d.stl  model.config  model.sdf
environment/models/contour_following/cf_line_2d/: line_2d.dae  line_2d.stl  model.config  model.sdf
environment/models/contour_following/cf_square_2_5d/: model.config  model.sdf
environment/models/contour_following/cf_square_2d/: model.config  model.sdf  square_2d.dae  square_2d.stl
environment/models/contour_following/cf_square_3d/: model.config  model.sdf  square_3d.dae  square_3d.stl
environment/models/contour_following/cf_star_2_5d/: model.config  model.sdf  star_2_5d.stl
environment/models/contour_following/cf_star_2d/: model.config  model.sdf  star_2d.dae  star_2d.stl
environment/models/contour_following/cf_star_3d/: model.config  model.sdf  star_3d.dae  star_3d.stl
environment/models/contour_following/cf_triangle_2_5d/: model.config  model.sdf  triangle_2_5d.dae
environment/models/contour_following/cf_triangle_2d/: model.config  model.sdf  triangle_2d.dae  triangle_2d.stl
environment/models/contour_following/cf_triangle_3d/: model.config  model.sdf  triangle_3d.dae  triangle_3d.stl
environment/models/haptic_exploration/he_box/: model.config  model.rsdf  model.sdf
environment/models/haptic_exploration/he_cylinder/: cylinder.dae  model.config  model.rsdf  model.sdf
environment/models/haptic_exploration/he_mustard/: model.rsdf  model.sdf
environment/models/haptic_exploration/he_shelf/: model.config  model.rsdf  model.sdf
environment/models/haptic_exploration/he_table/: model.rsdf  model.sdf
environment/models/vte_box/: model.rsdf  model.sdf
environment/models/vte_cylinder/: cylinder.stl  model.rsdf  model.sdf
environment/models/vte_mustard/: model.config  model.rsdf  model.sdf
environment/models/vte_shelf/: model.rsdf  model.sdf
environment/models/vte_table/: model.config  model.rsdf  model.sdf
environment/worlds/: he_scenario.sdf  vte_scenario.sdf
plugins/: CMakeLists.txt
plugins/skin/: CMakeLists.txt
plugins/skin/include/gazebo/: Skin.hh
plugins/skin/src/: Skin.cc  Skin_bkp.cc  log1.yml  log2.yml  log3.yml  notes.txt
robots/: CMakeLists.txt  database.config
robots/iCub/conf/: gazebo_icub_left_hand_finger_tips_contact_sensors.ini  gazebo_icub_right_hand_finger_tips_contact_sensors.ini
robots/iCub/robots/: model.urdf  model_backup.urdf
robots/iCub_manual/conf_manual/iCubGazeboV2_5_hapticmanip/: gazebo_icub_left_hand_finger_tips_contact_sensors.ini  gazebo_icub_right_hand_finger_tips_contact_sensors.ini
robots/iCub_manual/robots/iCubGazeboV2_5_hapticmanip/: model.config  model.urdf  model_bkp.urdf
